<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:background="#F2F2F2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/setting_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/setting_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="@dimen/toolbar_size"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_setting"
                android:textSize="20sp"
                android:textColor="@color/titleBar"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/white"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/scene_manager"
                        android:textColor="#ff999999"
                        android:textSize="18sp"
                        android:layout_weight="1"/>
                </LinearLayout>


                <com.android.csiapp.LauncherPreference
                    android:id="@+id/backup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceIcon="@drawable/icon_backup"
                    launcher:preferenceTitle="@string/backup"
                    launcher:rightImage="rightArrow" />

                <com.android.csiapp.LauncherPreference
                    android:id="@+id/deviceinit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceIcon="@drawable/icon_reactive"
                    launcher:preferenceTitle="@string/device_initial"
                    launcher:rightImage="rightArrow" />

                <com.android.csiapp.LauncherPreference
                    android:id="@+id/recovery"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceIcon="@drawable/icon_recovery"
                    launcher:preferenceTitle="@string/recovery"
                    launcher:rightImage="rightArrow" />

                <com.android.csiapp.LauncherPreference
                    android:id="@+id/update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceIcon="@drawable/icon_update"
                    launcher:preferenceTitle="@string/app_update"
                    launcher:rightImage="rightArrow" />
            </LinearLayout>

        </ScrollView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/about"
            android:textSize="14sp"
            android:textColor="#999999"
            />
    </LinearLayout>
</FrameLayout>