<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="@dimen/toolbar_size"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_createscene"
            android:textSize="20sp"
            android:textColor="@color/titleBar"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@+id/toolbar"
        android:background="#F7F7F7">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="16dp">
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton1"
                android:text="1"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton2"
                android:text="2"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton3"
                android:text="3"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton4"
                android:text="4"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton5"
                android:text="5"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton6"
                android:text="6"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton7"
                android:text="7"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:background="@drawable/dot"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pagebutton8"
                android:text="8"
                android:textColor="#29175b"
                android:textSize="28px"
                android:background="@drawable/img_step_nor"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_1"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView1"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_2"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView2"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_3"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView3"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_4"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView4"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_5"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView5"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_6"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView6"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_7"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView7"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/step_8"
                android:textSize="@dimen/createscene_textsize"
                android:id="@+id/pageTextView8"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/viewPager">
    </android.support.v4.view.ViewPager>
</LinearLayout>
